--- a/uebung-positionieren.html
+++ b/uebung-positionieren.html
@@ -6,12 +6,51 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Übung positionieren</title>
 	<link rel="stylesheet" href="reset.css">
-	
+	<link rel="stylesheet" href="style.css">
+
 
 </head>
-<body>
-	<div>
-		<!-- Dein Code kommt hier hin -->
+	<body>
+
+		<div class="wrapper clearfix"
+			<!-- Dein Code kommt hier hin -->
+			<div class="container">
+
+				<div class="float-right">
+					<img src="huhn.jpg" alt="huhn">
+					<p>Huhn</p>
+				</div>
+
+				<div class="float-right">
+					<img src="hund.jpg" alt="hund">
+					<p>Hund</p>
+				</div>
+
+				<div class="float-right">
+					<img src="katze.jpg" alt="katze">
+						<p>Katze</p>
+				</div>
+
+				<div class="float-right">
+					<img src="maus.jpg" alt="maus">
+						<p>Maus</p>
+				</div>
+
+		</div>
+
+			</div>
+
+		<div class="wrapper flex-container">
+
+			<div class="blue"></div>
+			<div class="pink"></div>
+			<div class="green"></div>
+
+
+			</div>
+
+
+
 
 
 
